[tool.poetry]
name = "urls"
version = "0.1.0"
description = ""
authors = ["Renan Andrade <Fel9.renan02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
pywhatkit = "^5.4"
python-telegram-bot = "^13.14"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
